# datacrumbs-utils

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-test.yml  format-check.yml
cmake/: datacrumbs-prepare-runtime.in  datacrumbs-probes.in  datacrumbs-subset-catalog.in  load_datacrumbs_system_configuration.py
cmake/configure_files/: datacrumbs_config.h.in  datacrumbs_utils_config.h.in
cmake/modules/: datacrumbs-utils.cmake
configs/: site-settings.yaml.example
docs/configs/: docker-toss.yaml  docker.yaml  ebpf.yaml  hdf.yaml  lead copy.yaml  lead-us.yaml  lead.yaml  quokka.yaml  tuolumne-mpiio.yaml  tuolumne.yaml
etc/datacrumbs/configs/: corona.yaml  docker-toss.yaml  docker.yaml  ebpf.yaml  lead copy.yaml  lead.yaml  project.env.local.in
etc/datacrumbs/modulefiles/: module.lua.in
infrastructure/docker/: Dockerfile  Dockerfile.build  build-multiarch.sh  docker-build.sh  test_run.sh
scripts/datacrumbs/: datacrumbs_args.in  datacrumbs_cluster_setup.in  datacrumbs_configure_template.in  datacrumbs_deploy_scheduler_hooks.in  datacrumbs_deploy_services.in  datacrumbs_install_flux_plugin.in  datacrumbs_logging.in  datacrumbs_run.in  datacrumbs_salloc.in  datacrumbs_sbatch.in  datacrumbs_service_wrapper.in  datacrumbs_setup.in  datacrumbs_sqlite_extract.in  datacrumbs_stop.in  datacrumbs_track.in  datacrumbs_untrack.in  datacrumbs_utility.in  datacrumbs_wrap.in  probe_configurator.in  probe_configurator_install.in  system_configurator.in  system_configurator_install.in
scripts/formatting/: autoformat.sh  check-formatting.sh
scripts/python/: configure_templates.py  datacrumbs_sqlite_extract.py
src/client/: library.cpp
src/common/: configuration_manager.cpp  configuration_manager.h  data_structures.h  enumerations.h  logging.h  probe_file.h  probe_signing_service.cpp  probe_signing_service.h  typedefs.h  utils.h
src/datacrumbs/: datacrumbs_utils_config.h
src/datacrumbs/utils/client/: library.cpp  library.h
src/datacrumbs/utils/common/: configuration_manager.cpp  configuration_manager.h  probe_signing_service.cpp  probe_signing_service.h
src/datacrumbs/utils/explorer/: probe_configurator_main.cpp  probe_explorer.cpp  probe_explorer.h  system_configurator_main.cpp
src/datacrumbs/utils/explorer/mechanism/: elf_capture.cpp  elf_capture.h  header_capture.cpp  header_capture.h  ksym_capture.cpp  ksym_capture.h  usdt_functions.h
src/datacrumbs/utils/system_configurator/: load.cpp
src/datacrumbs_utils/: configure_templates.py
src/explorer/: probe_configurator_main.cpp  probe_explorer.cpp  probe_explorer.h  system_configurator_main.cpp
src/explorer/mechanism/: elf_capture.cpp  header_capture.cpp  usdt_functions.h
tests/: CMakeLists.txt  dd_preload_test.sh.in  test_probe_catalog.py
tests/apps/Montage/: MontageExec.template.sh  setup_montage.sh
tests/benchmarks/ior/: CMakeLists.txt
tests/poc/probe-attach-generic/: .gitignore  Makefile  README.md  lead2-clang-19-120358.core  lead2-clang-19-120370.core  probe_attach_generic.bpf.c  probe_attach_generic.c  probe_attach_generic.h
tests/unittests/: CMakeLists.txt
tests/unittests/component/: elf_capture_test.cpp  header_capture_test.cpp  ksym_capture_test.cpp  probe_explorer_test.cpp
tests/unittests/io_tests/: CMakeLists.txt
tests/unittests/io_tests/scripts/: ior.sh  ior_hdf5_fpp.sh  ior_mpiio.sh  test_posix.sh  test_posix_overhead.sh  test_posix_read.sh  test_stdio.sh
tools/: CMakeLists.txt  analyze_trace.sh  callgraph_vis.cpp  separator.sh
